# destructive_command_guard

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  UPGRADE_LOG.md  install.sh  uninstall.sh
.beads/: issues.jsonl
.github/workflows/: acfs-checksums-dispatch.yml  bench.yml  ci.yml  cli-version-audit.yml  dcg-scan.yml  dist.yml  history-e2e.yml  notify-acfs.yml  release-automation.yml  scan.yml
docs/: agents.md
docs/packs/: README.md  cloud.md  database.md
patches/uring-fs/: Cargo.toml
patches/uring-fs/src/: lib.rs
src/: agent.rs  cli.rs  config.rs  context.rs  evaluator.rs  git.rs  heredoc.rs  hook.rs  main.rs  mcp.rs  normalize.rs  pending_exceptions.rs  perf.rs  rebase_recovery.rs  scan.rs  simulate.rs  trace.rs  update.rs
src/history/: mod.rs  schema.rs
src/output/: mod.rs  tables.rs
src/packs/: mod.rs
src/packs/apigateway/: apigee.rs  aws.rs  kong.rs
src/packs/backup/: borg.rs  rclone.rs  restic.rs
src/packs/cdn/: cloudflare_workers.rs  cloudfront.rs  fastly.rs
src/packs/cloud/: aws.rs  azure.rs  gcp.rs
src/packs/containers/: docker.rs  podman.rs
src/packs/core/: filesystem.rs  git.rs
src/packs/database/: mongodb.rs  redis.rs  supabase.rs
src/packs/dns/: route53.rs
src/packs/email/: ses.rs
src/packs/featureflags/: flipt.rs  launchdarkly.rs  split.rs  unleash.rs
src/packs/infrastructure/: pulumi.rs  terraform.rs
src/packs/kubernetes/: helm.rs  kubectl.rs
tests/: agent_profile_comprehensive.rs  cli_e2e.rs  history_full_flow.rs  history_integration.rs  pattern_audit.rs  rebase_recovery_e2e.rs  update_rollback.rs
(+19 files in other folders)
