[package]
edition = "2021"
name = "uring-fs"
version = "1.4.0"
authors = ["foxcirc"]
description = "Truly asynchronous file operations using io-uring. Supports any async runtime. Linux only."
license = "MIT"

[dependencies.io-uring]
version = "0.6.*"

[dependencies.libc]
version = "0.2.98"
default-features = false
